implemented login screen

--- a/index.css
+++ b/index.css
@@ -4,3 +4,13 @@
   font-size: calc(var(--font-size) - 4px);
   float: left;
 }
+
+#login-overlay {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: white;
+  padding: 20px;
+}
